--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 secret_settings.txt
-yatube/yatube_cache/
-yatube/yatube/secret_email.py
-_db.sqlite3
-py_db.sqlite3
+.github
 # C extensions
 *.so
 *.bat
